Verze 2.0.0
=================
- nový layout
- změna session exiration z 20 minutes na 10 days
- Na hlavní stránce statistiky plateb ve skupině
- Skrytí tlačítka smazat u cizích plateb