@@ -1,6 +1,6 @@
 {block content}
     <div class="row">
-        <div class="col-md-3 col-sm-6 col-xs-12">
+        <div class="col-md-3 col-sm-6 col-xs-6">
             <div class="info-box">
                 <span class="info-box-icon bg-aqua"><i class="ion ion-calculator"></i></span>
 
@@ -13,7 +13,7 @@
             <!-- /.info-box -->
         </div>
         <!-- /.col -->
-        <div class="col-md-3 col-sm-6 col-xs-12">
+        <div class="col-md-3 col-sm-6 col-xs-6">
             <div class="info-box">
                 <span class="info-box-icon bg-red"><i class="fa fa-money"></i></span>
 
@@ -36,7 +36,7 @@
         <!-- fix for small devices only -->
         <div class="clearfix visible-sm-block"></div>
 
-        <div class="col-md-3 col-sm-6 col-xs-12">
+        <div class="col-md-3 col-sm-6 col-xs-6">
             <div class="info-box">
                 <span class="info-box-icon bg-green"><i class="fa fa-user"></i></span>
 
@@ -49,7 +49,7 @@
             <!-- /.info-box -->
         </div>
         <!-- /.col -->
-        <div class="col-md-3 col-sm-6 col-xs-12">
+        <div class="col-md-3 col-sm-6 col-xs-6">
             <div class="info-box">
                 <span class="info-box-icon bg-yellow"><i class="fa fa-list-alt"></i></span>
 
