@@ -76,3 +76,10 @@ body {
     -moz-box-shadow: 0px 12px 25px 5px rgba(153,155,158,1);
     box-shadow: 0px 12px 25px 5px rgba(153,155,158,1);
 }
+
+@media only screen
+and (max-width : 750px) {
+    body{
+        font-size:15px;
+    }
+}
